syntax = "proto3";

option csharp_namespace = "MVCS.Presentation.gRPC";

package projects;
import "google/protobuf/empty.proto";

service Projects {
	rpc Create(CreateRequest) returns(CreateResponse);
	rpc CreatePost(CreatePostRequest) returns(CreatePostResponse);
}

message CreateRequest {
	string name = 1;
}

message CreateResponse {
	string identifier = 1;
	string name = 2;
}

message CreatePostRequest {
	string name = 1;
}

message CreatePostResponse {
	int32 id = 1;
	string name = 2;
}